--- a/nx.json
+++ b/nx.json
@@ -1,30 +1,36 @@
 {
-  "npmScope": "ngx-auth",
-  "implicitDependencies": {
-    "angular.json": "*",
-    "package.json": {
-      "dependencies": "*",
-      "devDependencies": "*"
-    },
-    "tsconfig.json": "*",
-    "tslint.json": "*",
-    "nx.json": "*"
-  },
-  "tasksRunnerOptions": {
-    "default": {
-      "runner": "@nrwl/workspace/tasks-runners/default",
-      "options": {
-        "cacheableOperations": ["build", "lint", "test", "e2e"]
-      }
-    }
-  },
-  "projects": {
-    "temp": {
-      "tags": []
-    },
-    "temp-e2e": {
-      "tags": [],
-      "implicitDependencies": ["temp"]
-    }
-  }
+	"npmScope": "aegis-auth",
+	"implicitDependencies": {
+		"angular.json": "*",
+		"package.json": {
+			"dependencies": "*",
+			"devDependencies": "*"
+		},
+		"tsconfig.json": "*",
+		"tslint.json": "*",
+		"nx.json": "*"
+	},
+	"tasksRunnerOptions": {
+		"default": {
+			"runner": "@nrwl/workspace/tasks-runners/default",
+			"options": {
+				"cacheableOperations": ["build", "lint", "test", "e2e"]
+			}
+		}
+	},
+	"projects": {
+		"core": {
+			"tags": ["lib"]
+		},
+		"core-demo": {
+			"tags": ["app"]
+		},
+		"core-demo-e2e": {
+			"tags": [],
+			"implicitDependencies": ["core-demo"]
+		},
+		"toolbox": {
+			"tags": ["lib"]
+		}
+	}
 }
