--- a/package.json
+++ b/package.json
@@ -1,67 +1,96 @@
 {
-  "name": "ngx-auth",
-  "version": "0.0.0",
-  "license": "MIT",
-  "scripts": {
-    "ng": "ng",
-    "nx": "nx",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "nx workspace-lint && ng lint",
-    "e2e": "ng e2e",
-    "affected:apps": "nx affected:apps",
-    "affected:libs": "nx affected:libs",
-    "affected:build": "nx affected:build",
-    "affected:e2e": "nx affected:e2e",
-    "affected:test": "nx affected:test",
-    "affected:lint": "nx affected:lint",
-    "affected:dep-graph": "nx affected:dep-graph",
-    "affected": "nx affected",
-    "format": "nx format:write",
-    "format:write": "nx format:write",
-    "format:check": "nx format:check",
-    "update": "ng update @nrwl/workspace",
-    "workspace-schematic": "nx workspace-schematic",
-    "dep-graph": "nx dep-graph",
-    "help": "nx help",
-    "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points"
-  },
-  "private": true,
-  "dependencies": {
-    "@nrwl/angular": "9.3.0",
-    "@angular/animations": "^9.1.0",
-    "@angular/common": "^9.1.0",
-    "@angular/compiler": "^9.1.0",
-    "@angular/core": "^9.1.0",
-    "@angular/forms": "^9.1.0",
-    "@angular/platform-browser": "^9.1.0",
-    "@angular/platform-browser-dynamic": "^9.1.0",
-    "@angular/router": "^9.1.0",
-    "core-js": "^2.5.4",
-    "rxjs": "~6.5.4",
-    "zone.js": "^0.10.2"
-  },
-  "devDependencies": {
-    "@angular/cli": "9.1.0",
-    "@nrwl/workspace": "9.3.0",
-    "@types/node": "~8.9.4",
-    "dotenv": "6.2.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~6.0.0",
-    "eslint": "6.8.0",
-    "typescript": "~3.8.3",
-    "prettier": "2.0.4",
-    "@angular/compiler-cli": "^9.1.0",
-    "@angular/language-service": "^9.1.0",
-    "@angular-devkit/build-angular": "0.901.0",
-    "codelyzer": "~5.0.1",
-    "jest-preset-angular": "8.1.2",
-    "@nrwl/jest": "9.3.0",
-    "jest": "25.2.3",
-    "@types/jest": "25.1.4",
-    "ts-jest": "25.2.1",
-    "cypress": "^4.1.0",
-    "@nrwl/cypress": "9.3.0"
-  }
+	"name": "aegis-auth",
+	"version": "0.0.0",
+	"license": "MIT",
+	"scripts": {
+		"ng": "ng",
+		"nx": "nx",
+		"start": "ng serve",
+		"build": "ng build",
+		"test": "ng test",
+		"lint": "nx workspace-lint && ng lint",
+		"lint:styles": "stylelint **/*.scss",
+		"lint:files:ts": "tslint --project .",
+		"lint:files:css": "stylelint",
+		"lint:files:scss": "stylelint --syntax=scss",
+		"lint:files:format": "prettier --check",
+		"e2e": "ng e2e",
+		"affected:apps": "nx affected:apps",
+		"affected:libs": "nx affected:libs",
+		"affected:build": "nx affected:build",
+		"affected:e2e": "nx affected:e2e",
+		"affected:test": "nx affected:test",
+		"affected:lint": "nx affected:lint",
+		"affected:dep-graph": "nx affected:dep-graph",
+		"affected": "nx affected",
+		"format": "nx format:write",
+		"format:write": "nx format:write",
+		"format:check": "nx format:check",
+		"update": "ng update @nrwl/workspace",
+		"workspace-schematic": "nx workspace-schematic",
+		"dep-graph": "nx dep-graph",
+		"help": "nx help",
+		"postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points"
+	},
+	"workspaces": [
+		"./apps/*",
+		"./libs/*"
+	],
+	"private": true,
+	"dependencies": {
+		"@angular/animations": "^9.1.0",
+		"@angular/common": "^9.1.0",
+		"@angular/compiler": "^9.1.0",
+		"@angular/core": "^9.1.0",
+		"@angular/forms": "^9.1.0",
+		"@angular/platform-browser": "^9.1.0",
+		"@angular/platform-browser-dynamic": "^9.1.0",
+		"@angular/router": "^9.1.0",
+		"@nrwl/angular": "9.3.0",
+		"@nrwl/linter": "^9.3.0",
+		"core-js": "^2.5.4",
+		"rxjs": "~6.5.4",
+		"tslib": "^1.10.0",
+		"zone.js": "^0.10.2"
+	},
+	"devDependencies": {
+		"@angular-devkit/build-angular": "0.901.0",
+		"@angular-devkit/build-ng-packagr": "~0.901.0",
+		"@angular/cli": "9.1.0",
+		"@angular/compiler-cli": "^9.1.0",
+		"@angular/language-service": "^9.1.0",
+		"@commitlint/cli": "^8.3.5",
+		"@commitlint/config-conventional": "^8.3.4",
+		"@nrwl/cypress": "9.3.0",
+		"@nrwl/eslint-plugin-nx": "9.3.0",
+		"@nrwl/jest": "9.3.0",
+		"@nrwl/workspace": "9.3.0",
+		"@types/jest": "25.1.4",
+		"@types/node": "~8.9.4",
+		"@typescript-eslint/eslint-plugin": "2.19.2",
+		"@typescript-eslint/parser": "2.19.2",
+		"codelyzer": "~5.0.1",
+		"cypress": "^4.1.0",
+		"dotenv": "6.2.0",
+		"eslint": "6.8.0",
+		"eslint-config-prettier": "^6.11.0",
+		"eslint-plugin-prettier": "^3.1.3",
+		"husky": "^4.2.5",
+		"jest": "25.2.3",
+		"jest-preset-angular": "8.1.2",
+		"lint-staged": "^10.2.4",
+		"markdownlint": "^0.20.3",
+		"markdownlint-cli": "^0.23.1",
+		"ng-packagr": "^9.0.0",
+		"prettier": "2.0.4",
+		"stylelint-config-prettier": "^8.0.1",
+		"stylelint-prettier": "^1.1.2",
+		"ts-jest": "25.2.1",
+		"ts-node": "~7.0.0",
+		"tslint": "~6.0.0",
+		"tslint-config-prettier": "^1.18.0",
+		"tslint-plugin-prettier": "^2.3.0",
+		"typescript": "~3.8.3",
+		"yaml-lint": "^1.2.4"
+	}
 }
