--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
 		"build": "ng build",
 		"test": "ng test",
 		"lint": "nx workspace-lint && ng lint",
-		"lint:styles": "stylelint **/*.scss",
-		"lint:files:ts": "tslint --project .",
-		"lint:files:css": "stylelint --syntax=css ./**/*.css",
-		"lint:files:scss": "stylelint --syntax=scss ./**/*.scss",
-		"lint:files:format": "prettier --check",
+		"lint:ts": "tslint --project .",
+		"lint:es": "eslint .",
+		"lint:css": "stylelint --allow-empty-input --syntax=css ./**/*.css",
+		"lint:scss": "stylelint --allow-empty-input --syntax=scss ./**/*.scss",
+		"lint:md": "markdownlint --ignore './node_modules' .",
+		"lint:format": "prettier --check .",
 		"e2e": "ng e2e",
 		"affected:apps": "nx affected:apps",
 		"affected:libs": "nx affected:libs",
@@ -85,7 +86,7 @@
 		"markdownlint-cli": "^0.23.1",
 		"ng-packagr": "^9.0.0",
 		"npm-check-updates": "^6.0.1",
-		"prettier": "2.0.5",
+		"prettier": "^2.0.5",
 		"standard-version": "^8.0.0",
 		"stylelint-config-prettier": "^8.0.1",
 		"stylelint-prettier": "^1.1.2",
