--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"lint:css": "stylelint --allow-empty-input --syntax=css ./**/*.css",
 		"lint:scss": "stylelint --allow-empty-input --syntax=scss ./**/*.scss",
 		"lint:md": "markdownlint --ignore './node_modules' .",
+		"lint:rmd": "remark .",
 		"lint:format": "prettier --check .",
 		"e2e": "ng e2e",
 		"affected:apps": "nx affected:apps",
@@ -51,10 +52,8 @@
 		"@angular/platform-browser-dynamic": "^9.1.7",
 		"@angular/router": "^9.1.7",
 		"@nrwl/angular": "9.3.0",
-		"@nrwl/linter": "^9.3.0",
 		"core-js": "^3.6.5",
 		"rxjs": "~6.5.5",
-		"stylelint": "^13.5.0",
 		"tslib": "^2.0.0",
 		"zone.js": "^0.10.3"
 	},
@@ -69,6 +68,7 @@
 		"@nrwl/cypress": "9.3.0",
 		"@nrwl/eslint-plugin-nx": "9.3.0",
 		"@nrwl/jest": "9.3.0",
+		"@nrwl/linter": "^9.3.0",
 		"@nrwl/workspace": "9.3.0",
 		"@types/jest": "25.2.3",
 		"@types/node": "~14.0.4",
@@ -89,7 +89,14 @@
 		"ng-packagr": "^9.1.5",
 		"npm-check-updates": "^6.0.1",
 		"prettier": "^2.0.5",
+		"remark": "^12.0.0",
+		"remark-cli": "^8.0.0",
+		"remark-lint": "^7.0.0",
+		"remark-lint-maximum-line-length": "^2.0.0",
+		"remark-preset-lint-consistent": "^3.0.0",
+		"remark-preset-lint-recommended": "^4.0.0",
 		"standard-version": "^8.0.0",
+		"stylelint": "^13.5.0",
 		"stylelint-config-prettier": "^8.0.1",
 		"stylelint-prettier": "^1.1.2",
 		"ts-jest": "26.0.0",
