--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
 		"node": ">=10.13.0",
 		"yarn": ">=1.0.0"
 	},
-	"workspaces": [
-		"./apps/*",
-		"./libs/*"
-	],
+	"workspaces": {
+		"packages": [
+			"apps/*",
+			"libs/*"
+		]
+	},
 	"scripts": {
 		"ng": "ng",
 		"nx": "nx",
@@ -118,6 +120,7 @@
 		"remark-lint-maximum-line-length": "^2.0.0",
 		"remark-preset-lint-consistent": "^3.0.0",
 		"remark-preset-lint-recommended": "^4.0.0",
+		"rollup": "^2.10.8",
 		"rollup-plugin-gzip": "^2.5.0",
 		"rollup-plugin-terser": "^6.0.1",
 		"standard-version": "^8.0.0",
