--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,12 +6,32 @@
 				"runtimeExecutable": "/usr/bin/chromium"
 			},
 			"request": "launch",
-			"name": "Launch Demo App",
-			"url": "http://localhost:4201",
+			"name": "Launch Core Demo",
+			"url": "http://localhost:4801",
 			"webRoot": "${workspaceFolder}",
 			"cwd": "${workspaceFolder}",
-			"preLaunchTask": "start:demo-app",
-			"userDataDir": "${workspaceFolder}/.vscode/chrome/"
+			"preLaunchTask": "start:core"
+		},
+		{
+			"name": "Current TS File",
+			"type": "node",
+			"request": "launch",
+			"env": {
+				"TS_NODE_PROJECT": "./tsconfig.json",
+				"TS_NODE_TRANSPILE_ONLY": "true",
+				"TS_NODE_FILES": "true"
+			},
+			"args": ["${relativeFile}"],
+			"runtimeArgs": [
+				"-r",
+				"ts-node/register",
+				"-r",
+				"tsconfig-paths/register",
+				"--max-old-space-size=8192"
+			],
+			"cwd": "${workspaceRoot}",
+			"protocol": "inspector",
+			"internalConsoleOptions": "openOnSessionStart"
 		}
 	]
 }
