--- a/angular.json
+++ b/angular.json
@@ -101,7 +101,8 @@
 				"serve": {
 					"builder": "@angular-devkit/build-angular:dev-server",
 					"options": {
-						"browserTarget": "core-demo:build"
+						"browserTarget": "core-demo:build",
+						"port": 4801
 					},
 					"configurations": {
 						"production": {
