--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
 		"@nrwl/web": "^9.3.0",
 		"@nrwl/workspace": "9.3.0",
 		"@types/jest": "25.2.3",
+		"@types/js-base64": "^2.3.1",
 		"@types/node": "~14.0.5",
 		"@typescript-eslint/eslint-plugin": "3.0.0",
 		"@typescript-eslint/parser": "3.0.0",
