--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,11 +5,13 @@
 		"sourceMap": true,
 		"declaration": false,
 		"moduleResolution": "node",
+		"esModuleInterop": true,
 		"emitDecoratorMetadata": true,
 		"experimentalDecorators": true,
 		"importHelpers": true,
 		"target": "es2015",
 		"module": "esnext",
+		"strict": true,
 		"typeRoots": ["node_modules/@types"],
 		"lib": ["es2017", "dom"],
 		"skipLibCheck": true,
