--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
 		"dep-graph": "nx dep-graph",
 		"help": "nx help",
 		"postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
-		"release": "standard-version"
+		"release": "standard-version",
+		"prepublishOnly": "yarn build"
 	},
 	"dependencies": {
 		"@angular/animations": "^9.1.9",
@@ -97,9 +98,9 @@
 		"@nrwl/workspace": "9.3.0",
 		"@types/jest": "25.2.3",
 		"@types/js-base64": "^2.3.1",
-		"@types/node": "~14.0.5",
-		"@typescript-eslint/eslint-plugin": "3.0.1",
-		"@typescript-eslint/parser": "3.0.1",
+		"@types/node": "~14.0.6",
+		"@typescript-eslint/eslint-plugin": "3.0.2",
+		"@typescript-eslint/parser": "3.0.2",
 		"codelyzer": "~5.2.2",
 		"cypress": "^4.7.0",
 		"dotenv": "8.2.0",
@@ -109,7 +110,7 @@
 		"husky": "^4.2.5",
 		"jest": "26.0.1",
 		"jest-preset-angular": "8.2.0",
-		"lint-staged": "^10.2.6",
+		"lint-staged": "^10.2.7",
 		"markdownlint": "^0.20.3",
 		"markdownlint-cli": "^0.23.1",
 		"ng-packagr": "^9.1.5",
@@ -121,15 +122,15 @@
 		"remark-lint-maximum-line-length": "^2.0.0",
 		"remark-preset-lint-consistent": "^3.0.0",
 		"remark-preset-lint-recommended": "^4.0.0",
-		"rollup": "^2.10.9",
+		"rollup": "^2.12.0",
 		"rollup-plugin-gzip": "^2.5.0",
 		"rollup-plugin-terser": "^6.1.0",
 		"standard-version": "^8.0.0",
 		"stylelint": "^13.5.0",
 		"stylelint-config-prettier": "^8.0.1",
 		"stylelint-prettier": "^1.1.2",
-		"ts-jest": "26.0.0",
-		"ts-node": "~8.10.1",
+		"ts-jest": "26.1.0",
+		"ts-node": "~8.10.2",
 		"tslint": "~6.1.2",
 		"tslint-config-prettier": "^1.18.0",
 		"tslint-plugin-prettier": "^2.3.0",
