--- a/package.json
+++ b/package.json
@@ -98,9 +98,9 @@
 		"@nrwl/workspace": "9.3.0",
 		"@types/jest": "25.2.3",
 		"@types/js-base64": "^2.3.1",
-		"@types/node": "~14.0.6",
-		"@typescript-eslint/eslint-plugin": "3.0.2",
-		"@typescript-eslint/parser": "3.0.2",
+		"@types/node": "~14.0.9",
+		"@typescript-eslint/eslint-plugin": "3.1.0",
+		"@typescript-eslint/parser": "3.1.0",
 		"codelyzer": "~5.2.2",
 		"cypress": "^4.7.0",
 		"dotenv": "8.2.0",
@@ -110,7 +110,7 @@
 		"husky": "^4.2.5",
 		"jest": "26.0.1",
 		"jest-preset-angular": "8.2.0",
-		"lint-staged": "^10.2.7",
+		"lint-staged": "^10.2.8",
 		"markdownlint": "^0.20.3",
 		"markdownlint-cli": "^0.23.1",
 		"ng-packagr": "^9.1.5",
@@ -122,7 +122,7 @@
 		"remark-lint-maximum-line-length": "^2.0.0",
 		"remark-preset-lint-consistent": "^3.0.0",
 		"remark-preset-lint-recommended": "^4.0.0",
-		"rollup": "^2.12.0",
+		"rollup": "^2.12.1",
 		"rollup-plugin-gzip": "^2.5.0",
 		"rollup-plugin-terser": "^6.1.0",
 		"standard-version": "^8.0.0",
@@ -134,6 +134,7 @@
 		"tslint": "~6.1.2",
 		"tslint-config-prettier": "^1.18.0",
 		"tslint-plugin-prettier": "^2.3.0",
+		"typedoc": "^0.17.7",
 		"typescript": "~3.8.3",
 		"yaml-lint": "^1.2.4"
 	}
