--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
 		"format:check": "nx format:check",
 		"ncu": "ncu",
 		"ncu:u": "ncu -u",
+		"docs": "typedoc libs",
 		"update": "ng update @nrwl/workspace",
 		"workspace-schematic": "nx workspace-schematic",
 		"dep-graph": "nx dep-graph",
@@ -98,19 +99,19 @@
 		"@nrwl/workspace": "9.3.0",
 		"@types/jest": "25.2.3",
 		"@types/js-base64": "^2.3.1",
-		"@types/node": "~14.0.9",
+		"@types/node": "~14.0.11",
 		"@typescript-eslint/eslint-plugin": "3.1.0",
 		"@typescript-eslint/parser": "3.1.0",
 		"codelyzer": "~5.2.2",
 		"cypress": "^4.7.0",
 		"dotenv": "8.2.0",
-		"eslint": "7.1.0",
+		"eslint": "7.2.0",
 		"eslint-config-prettier": "^6.11.0",
 		"eslint-plugin-prettier": "^3.1.3",
 		"husky": "^4.2.5",
 		"jest": "26.0.1",
 		"jest-preset-angular": "8.2.0",
-		"lint-staged": "^10.2.8",
+		"lint-staged": "^10.2.9",
 		"markdownlint": "^0.20.3",
 		"markdownlint-cli": "^0.23.1",
 		"ng-packagr": "^9.1.5",
@@ -122,11 +123,11 @@
 		"remark-lint-maximum-line-length": "^2.0.0",
 		"remark-preset-lint-consistent": "^3.0.0",
 		"remark-preset-lint-recommended": "^4.0.0",
-		"rollup": "^2.12.1",
+		"rollup": "^2.13.1",
 		"rollup-plugin-gzip": "^2.5.0",
 		"rollup-plugin-terser": "^6.1.0",
 		"standard-version": "^8.0.0",
-		"stylelint": "^13.5.0",
+		"stylelint": "^13.6.0",
 		"stylelint-config-prettier": "^8.0.1",
 		"stylelint-prettier": "^1.1.2",
 		"ts-jest": "26.1.0",
@@ -135,6 +136,7 @@
 		"tslint-config-prettier": "^1.18.0",
 		"tslint-plugin-prettier": "^2.3.0",
 		"typedoc": "^0.17.7",
+		"typedoc-plugin-external-module-name": "^4.0.2",
 		"typescript": "~3.8.3",
 		"yaml-lint": "^1.2.4"
 	}
