--- a/libs/core/package.json
+++ b/libs/core/package.json
@@ -32,5 +32,8 @@
 	"peerDependencies": {
 		"@angular/common": "^9.1.0",
 		"@angular/core": "^9.1.0"
+	},
+	"optionalDependencies": {
+		"@aegis-auth/jwt": "link:../jwt"
 	}
 }
