--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,5 +1,6 @@
 {
 	"version": "2.0.0",
+
 	"tasks": [
 		{
 			"label": "start:core",
@@ -9,6 +10,66 @@
 			},
 			"type": "npm",
 			"script": "start:core",
+			"isBackground": true,
+			"options": { "env": { "NODE_OPTIONS": "--max_old_space_size=8192 " } },
+			"problemMatcher": [
+				"$tsc-watch",
+				{
+					"owner": "typescript",
+					"pattern": {
+						"regexp": "^([^\\s].*)\\((\\d+|\\,\\d+|\\d+,\\d+,\\d+,\\d+)\\):\\s+(error|warning|info)\\s+(TS\\d+)\\s*:\\s*(.*)$",
+						"file": 1,
+						"location": 2,
+						"severity": 3,
+						"code": 4,
+						"message": 5
+					},
+					"background": {
+						"activeOnStart": true,
+						"beginsPattern": "^\\s*\\d{1,2}:\\d{1,2}:\\d{1,2}(?: AM| PM)? - File change detected\\. Starting incremental compilation\\.\\.\\.",
+						"endsPattern": "^.*Compiled successfully."
+					}
+				}
+			]
+		},
+		{
+			"label": "start:jwt",
+			"group": {
+				"kind": "build",
+				"isDefault": true
+			},
+			"type": "npm",
+			"script": "start:jwt",
+			"isBackground": true,
+			"options": { "env": { "NODE_OPTIONS": "--max_old_space_size=8192 " } },
+			"problemMatcher": [
+				"$tsc-watch",
+				{
+					"owner": "typescript",
+					"pattern": {
+						"regexp": "^([^\\s].*)\\((\\d+|\\,\\d+|\\d+,\\d+,\\d+,\\d+)\\):\\s+(error|warning|info)\\s+(TS\\d+)\\s*:\\s*(.*)$",
+						"file": 1,
+						"location": 2,
+						"severity": 3,
+						"code": 4,
+						"message": 5
+					},
+					"background": {
+						"activeOnStart": true,
+						"beginsPattern": "^\\s*\\d{1,2}:\\d{1,2}:\\d{1,2}(?: AM| PM)? - File change detected\\. Starting incremental compilation\\.\\.\\.",
+						"endsPattern": "^.*Compiled successfully."
+					}
+				}
+			]
+		},
+		{
+			"label": "start:ngrx",
+			"group": {
+				"kind": "build",
+				"isDefault": true
+			},
+			"type": "npm",
+			"script": "start:ngrx",
 			"isBackground": true,
 			"options": { "env": { "NODE_OPTIONS": "--max_old_space_size=8192 " } },
 			"problemMatcher": [
