--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
 		"start:core": "nx serve core-demo",
 		"start:jwt": "nx serve jwt-demo",
 		"start:ngrx": "nx serve ngrx-demo",
-		"build": "ng build",
-		"build:prod": "ng build --prod",
-		"test": "ng test",
+		"build": "nx build",
+		"build:prod": "nx affected:build --all --prod",
+		"test": "nx test",
 		"lint": "nx workspace-lint && ng lint",
 		"lint:ts": "tslint --project .",
 		"lint:es": "eslint .",
@@ -45,7 +45,7 @@
 		"lint:md": "markdownlint --ignore 'CHANGELOG.md' --ignore-path '.gitignore' .",
 		"lint:rmd": "remark .",
 		"lint:format": "prettier --check .",
-		"e2e": "ng e2e",
+		"e2e": "nx e2e",
 		"affected:apps": "nx affected:apps",
 		"affected:libs": "nx affected:libs",
 		"affected:build": "nx affected:build",
@@ -99,6 +99,7 @@
 		"@nrwl/node": "^9.4.0",
 		"@nrwl/web": "^9.4.0",
 		"@nrwl/workspace": "9.4.0",
+		"@semantic-release/npm": "^7.0.5",
 		"@types/jest": "26.0.0",
 		"@types/js-base64": "^2.3.1",
 		"@types/node": "~14.0.13",
@@ -129,6 +130,7 @@
 		"rollup-plugin-gzip": "^2.5.0",
 		"rollup-plugin-terser": "^6.1.0",
 		"semantic-release": "^17.0.8",
+		"semantic-release-monorepo": "^7.0.2",
 		"standard-version": "^8.0.0",
 		"stylelint": "^13.6.0",
 		"stylelint-config-prettier": "^8.0.1",
