--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,7 +67,8 @@ jobs:
       - name: Install packages
         if: steps.cache-packages.outputs.cache-hit != 'true'
         run: yarn install
-      - run: yarn test
+      - name: Test
+        run: yarn test
       - name: Upload coverage result to codacy
         run: |
           export CODACY_PROJECT_TOKEN=${{ secrets.CODACY_PROJECT_TOKEN }}
@@ -77,3 +78,28 @@ jobs:
         run: |
           bash <(curl -s https://codecov.io/bash) \
           -t ${{ secrets.CODECOV_TOKEN }}
+  build:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [12.x, 14.x]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 1
+      - name: Cache
+        id: cache-packages
+        uses: actions/cache@v1.2.0
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2-beta
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: Install packages
+        if: steps.cache-packages.outputs.cache-hit != 'true'
+        run: yarn install
+      - name: Build production
+        run: yarn build:prod
